Fix toolbar so tabs text is visible

--- a/Canary/Custom.css
+++ b/Canary/Custom.css
@@ -413,14 +413,6 @@
 	color: #f8f8f8 !important;
 }
 
-#-webkit-web-inspector #toolbar div:first-child {
-	display: none !important;
-}
-
-#-webkit-web-inspector #toolbar > div:first-child {
-	display: block !important;
-}
-
 #-webkit-web-inspector #main {
 	top: 34px !important;
 }
